HVAC Backup 2/objects/Payment_Log__c(1).object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTM-{0000000}</displayFormat>
        <label>Payment Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>